# konjocoin

./: .appveyor.yml  .conf  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Dockerfile  INSTALL.md  Makefile.am  README.md  configure.ac  konjocoin.conf  libkonjocoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  (+1 more)
.tx/: config
doc/man/: Makefile.am  konjocoin-cli.1  konjocoin-qt.1  konjocoin-tx.1  konjocoin-wallet.1  konjocoind.1
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  addrman.h  amount.h  arith_uint256.h  attributes.h  banman.h  base58.h  bech32.h  blockencodings.h  blockfilter.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  cuckoocache.h  dbwrapper.cpp  dbwrapper.h  fs.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  (+69 more)
src/bench/: .gitignore  bench.h  bench_konjocoin.cpp  ccoins_caching.cpp  checkblock.cpp  coin_selection.cpp  verify_script.cpp
src/compat/: assumptions.h  byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.h  params.h  tx_verify.h  validation.h
src/crypto/: aes.h  chacha20.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  scrypt.h  sha1.h  sha256.cpp  sha256.h  sha512.h  siphash.h
src/crypto/ctaes/: README.md
src/index/: base.h  txindex.h
src/interfaces/: README.md  chain.h  handler.h  node.cpp  node.h  wallet.h
src/node/: transaction.h
src/policy/: feerate.h  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  konjocoin.cpp  konjocoin.h  konjocoin.qrc  konjocoin_locale.qrc  konjocoinaddressvalidator.cpp  konjocoinaddressvalidator.h  konjocoinamountfield.cpp  konjocoinamountfield.h  konjocoingui.cpp  konjocoingui.h  konjocoinstrings.cpp  konjocoinunits.cpp  konjocoinunits.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  macos_appnap.h  macos_appnap.mm  main.cpp  (+59 more)
src/qt/forms/: addressbookpage.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: konjocoin_af.ts  konjocoin_af_ZA.ts  konjocoin_am.ts  konjocoin_ar.ts  konjocoin_be_BY.ts  konjocoin_bg.ts  konjocoin_bg_BG.ts  konjocoin_bn.ts  konjocoin_bs.ts  konjocoin_ca.ts  konjocoin_ca@valencia.ts  konjocoin_ca_ES.ts  konjocoin_cs.ts  konjocoin_cs_CZ.ts  konjocoin_cy.ts  konjocoin_da.ts  konjocoin_de.ts  konjocoin_de_DE.ts  konjocoin_el.ts  konjocoin_el_GR.ts  konjocoin_en.ts  konjocoin_en_AU.ts  konjocoin_en_GB.ts  konjocoin_eo.ts  konjocoin_es.ts  konjocoin_es_419.ts  konjocoin_es_AR.ts  konjocoin_es_CL.ts  konjocoin_es_CO.ts  konjocoin_es_DO.ts  konjocoin_es_ES.ts  konjocoin_es_MX.ts  konjocoin_es_UY.ts  konjocoin_es_VE.ts  konjocoin_et.ts  konjocoin_et_EE.ts  konjocoin_eu_ES.ts  konjocoin_fa.ts  konjocoin_fa_IR.ts  konjocoin_fi.ts  (+79 more)
src/qt/res/: konjocoin-qt-res.rc
src/qt/res/icons/: konjocoin.icns
src/qt/test/: Makefile  addressbooktests.cpp  addressbooktests.h  apptests.cpp  apptests.h  compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  util.h  wallettests.cpp  wallettests.h
src/rpc/: blockchain.cpp  blockchain.h  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rawtransaction.h  register.h  server.cpp  server.h  util.h
src/script/: descriptor.h  interpreter.cpp  interpreter.h  ismine.h  konjocoinconsensus.cpp  konjocoinconsensus.h  script.h  script_error.h  sigcache.h  sign.h  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  blockfilter_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compilerbug_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  denialofservice_tests.cpp  descriptor_tests.cpp  fs_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_io_tests.cpp  key_properties.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  (+34 more)
src/test/data/: README.md  tx_valid.json
src/test/fuzz/: fuzz.h
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h  univalue_get.cpp
src/util/: bip32.h  bytevectorhash.h  memory.h  moneystr.h  strencodings.h  system.cpp  system.h  time.cpp  time.h
src/wallet/: coincontrol.h  coinselection.h  crypter.h  db.cpp  db.h  feebumper.h  fees.h  psbtwallet.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.h  wallettool.cpp  wallettool.h  walletutil.cpp  walletutil.h
src/wallet/test/: coinselector_tests.cpp  db_tests.cpp  init_test_fixture.h  init_tests.cpp  psbt_wallet_tests.cpp  wallet_crypto_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h  zmqrpc.h
(+361 files in other folders)
