dist_man1_MANS=

if BUILD_KONJOCOIND
  dist_man1_MANS+=litecoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=litecoin-qt.1
endif

if BUILD_KONJOCOIN_CLI
  dist_man1_MANS+=litecoin-cli.1
endif

if BUILD_KONJOCOIN_TX
  dist_man1_MANS+=litecoin-tx.1
endif

if ENABLE_WALLET
if BUILD_KONJOCOIN_WALLET
  dist_man1_MANS+=litecoin-wallet.1
endif
endif
