dist_man1_MANS=

if BUILD_KONJOCOIND
  dist_man1_MANS+=konjocoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=konjocoin-qt.1
endif

if BUILD_KONJOCOIN_CLI
  dist_man1_MANS+=konjocoin-cli.1
endif

if BUILD_KONJOCOIN_TX
  dist_man1_MANS+=konjocoin-tx.1
endif

if ENABLE_WALLET
if BUILD_KONJOCOIN_WALLET
  dist_man1_MANS+=konjocoin-wallet.1
endif
endif
